--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.home-bg-rigth {
+  @apply bg-[#fbe2e3]
+  absolute
+  top-[-6rem]
+  -z-10
+  right-[11rem]
+  h-[31.25rem]
+  w-[31.25rem]
+  rounded-full
+  blur-[10rem]
+  sm:w-[68.75rem];
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.home-bg-left {
+  @apply bg-[#dbd7fb]
+  absolute
+  top-[-1rem]
+  -z-10
+  left-[-35rem]
+  h-[31.25rem]
+  w-[50rem]
+  rounded-full
+  blur-[10rem]
+  sm:w-[68.75rem]
+  md:left-[-33rem]
+  lg:left-[-28rem]
+  xl:left-[-15rem]
+  2xl:left-[-5rem]
 }
