--- a/components/header/style.css
+++ b/components/header/style.css
@@ -1,13 +1,12 @@
 .header-style {
-    @apply z-[999]
-    relative
+  @apply z-[999]
+    relative;
 }
 
-.navbar-style {
-    @apply fixed
+.navbar-bg-style {
+  @apply fixed
     top-0
     left-1/2
-    -translate-x-1/2
     h-[4.5rem]
     w-full
     rounded-none
@@ -22,5 +21,51 @@
     sm:top-6
     sm:h-[3.25rem]
     sm:w-[36rem]
-    sm:rounded-full
+    sm:rounded-full;
+}
+
+.navbar-style {
+  @apply flex
+    fixed
+    top-[0.15rem]
+    left-1/2
+    h-12
+    -translate-x-1/2
+    py-2
+    sm:top-[1.7rem]
+    sm:h-[initial]
+    sm:py-0;
+}
+
+.nav-ul-style {
+  @apply flex
+    w-[22rem]
+    flex-wrap
+    items-center
+    justify-center
+    gap-y-1
+    text-[0.9rem]
+    font-medium
+    text-gray-500
+    sm:w-[initial]
+    sm:flex-nowrap
+    sm:gap-5;
+}
+
+.nav-li-style {
+  @apply h-3/4
+    flex
+    items-center
+    justify-center;
+}
+
+.nav-link-style {
+  @apply flex
+    w-full
+    items-center
+    justify-center
+    px-3
+    py-3
+    hover:text-gray-950
+    transition;
 }
