Inserted profile picture

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,13 @@
 @tailwind utilities;
 
 .body-style {
-  @apply bg-gray-50 text-gray-950 relative h-[5000px]
+  @apply
+  bg-gray-50
+  text-gray-950
+  relative
+  h-[5000px]
+  pt-28
+  sm:pt-36
 }
 
 .home-bg-rigth {
