--- a/components/intro/style.css
+++ b/components/intro/style.css
@@ -1,10 +1,10 @@
-.picture-container{
+.profilePicContainer{
     @apply flex
     items-center
     justify-center
 }
 
-.profile-picture{
+.profilePicture{
     @apply rounded-full
     h-32
     w-32
@@ -20,3 +20,4 @@
     right-0
     text-5xl
 }
+
